Updated example, according to latest merge.

--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
 
             <!-- some colors -->
             <div class="clearfix">
-                <div id="bluecircle" class="c100 p17 big">
+                <div data-percircle="17" class="c100 big">
                     <span>17%</span>
                     <div class="slice">
                         <div class="bar"></div>
                         <div class="fill"></div>
                     </div>
                 </div>
-				<div id="orangecircle" class="c100 p60 orange">
+				<div data-percircle="60" class="c100 orange">
                     <span>60%</span>
                     <div class="slice">
                         <div class="bar"></div>
                         <div class="fill"></div>
                     </div>
                 </div>
-				<div id="pinkcircle" class="c100 p94 small green">
+				<div data-percircle="94" class="c100 small green">
 					<span>94%</span>
 					<div class="slice">
 						<div class="bar"></div>
@@ -63,21 +63,21 @@
             <div class="dark-area clearfix">
 				<!-- some colors -->
                 <div class="clearfix">
-                    <div id="lightcircle" class="c100 p77 dark big">
+                    <div data-percircle="77" class="c100 dark big">
                         <span>77%</span>
                         <div class="slice">
                             <div class="bar"></div>
                             <div class="fill"></div>
                         </div>
                     </div>
-                    <div id="dgreencircle" class="c100 p50 dark green">
+                    <div data-percircle="50" class="c100 dark green">
                         <span>50%</span>
                         <div class="slice">
                             <div class="bar"></div>
                             <div class="fill"></div>
                         </div>
                     </div>
-                    <div id="sacircle" class="c100 p33 dark small pink">
+                    <div data-percircle="33" class="c100 dark small pink">
                         <span>33%</span>
                         <div class="slice">
                             <div class="bar"></div>
@@ -88,7 +88,7 @@
                 <!-- /some colors -->
 				
 			</div><!-- /.dark-area -->
-			<small>Thodoris Bais | <a href="http://thodorisbais.blogspot.com.net">Blog</a></small>
+			<small>Thodoris Bais | <a href="http://thodorisbais.blogspot.com" target="_blank">Blog</a></small>
         </div>
     </body>
 </html>
