Corrected link to my blog

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <!-- /custom options -->
         </div>
         
-        <small>Thodoris Bais | <a href="http://thodorisbais.blogspot.com.net">Blog</a></small>
+        <small>Thodoris Bais | <a href="http://thodorisbais.blogspot.com">Blog</a></small>
     </div>
     
     <script type="text/javascript">
