--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div id="custom" class="yellow big"></div>
             </div>
             <pre>
-    $("#custom").perCircle({
+    $("#custom").percircle({
         text:"custom",
         percent: 27
     });
@@ -104,8 +104,8 @@
     
     <script type="text/javascript">
         $(function(){
-            $("[id$='circle']").perCircle();
-            $("#custom").perCircle({
+            $("[id$='circle']").percircle();
+            $("#custom").percircle({
                 text:"custom",
                 percent: 27
             });
