--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <!-- custom options -->
             <div class="clearfix">
                 <div id="custom" class="yellow big"></div> 
-                <div id="clock" class="perclock purple big"></div>
+                <div id="clock" class="purple big"></div>
             </div>
             <pre>
     $("#custom").percircle({         $("#clock").percircle({
