--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>percircle</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="js/percircle.js"></script>
     
     <!-- styles for this little demo page -->
