--- a/example/index.html
+++ b/example/index.html
@@ -8,33 +8,12 @@
     <title>percircle</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="js/percircle.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="../dist/js/percircle.js"></script>
     
     <!-- styles for this little demo page -->
-    <style type="text/css">
-        body {
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-        }
-        .page {
-            margin: 40px;
-        }
-        h1 {
-            margin: 40px 0 60px 0;
-        }
-        .clearfix:before, .clearfix:after { content: " "; display: table; }
-        .clearfix:after { clear: both; }
-        .clearfix { *zoom: 1; }
-        .dark-area {
-            background-color: #555;
-            padding: 40px;
-            margin: 0 -40px 20px -40px;
-        }
-    </style>
-    <link rel="stylesheet" href="css/percircle.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../dist/css/percircle.css">
 </head>
 
 <body>
