Custom progress bar color

--- a/example/index.html
+++ b/example/index.html
@@ -77,7 +77,11 @@
             </pre>
             <!-- /custom options -->
         </div>
-        
+
+    <h2>Custom Progress Background</h2>
+    <div class="clearfix">
+        <div id="custom-circle" data-percent="43" data-animate="true" data-color="green" class="big"></div>
+    </div>
         <small>Thodoris Bais | <a href="http://thodorisbais.blogspot.com">Blog</a></small>
     </div>
     
