minor changes to example

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             <pre>
     $("#custom").percircle({             $("#clock").percircle({            $("#custom-color").percircle({          $("#custom").percircle({                          
         text:"custom",                       perclock: true                     progressBarColor: "#CC3366",            perdown: true,                        
-        percent: 27                      });                                    percent: 64                             secs: 54, 
-                                                                            });                                         timeUpText: 'finally!'
+        percent: 27                      });                                    percent: 64                             secs: 14, 
+    });                                                                     });                                         timeUpText: 'finally!'
                                                                                                                     });                       
             
 			</pre>
@@ -117,7 +117,8 @@
 			$("#countdown").percircle({
                 perdown: true,
 				secs: 14,
-				timeUpText: 'finally!'
+				timeUpText: 'finally!',
+				reset: true
             });
             
             $("#custom").percircle({
