--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
 <body>
     <div class="page">
+	<a href="https://github.com/toubou91/percircle"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
         <h1>percircle</h1>
         
         <h2>Color variants</h2>
@@ -103,7 +104,7 @@
             <!-- /custom options -->
         </div>
 
-        <small>Thodoris Bais | <a href="http://thodorisbais.blogspot.com">Blog</a></small>
+        <small><a href="http://twitter.com/ThodorisBais">Thodoris Bais</a></small>
     </div>
     
     <script type="text/javascript">
