Added star and fork button directly to page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="./dist/js/percircle.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     
     <link rel="stylesheet" href="./dist/css/percircle.css">
 	<style>
@@ -40,6 +41,12 @@
 <body>
     <div class="page">
 	<a href="https://github.com/toubou91/percircle"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
+        <!-- Place this tag where you want the button to render. -->
+        <div style="position: absolute; top: 6%; right: 50%; border: 0;">
+            <a class="github-button" href="https://github.com/toubou91/percircle" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star toubou91/percircle on GitHub">Star</a>
+            <a class="github-button" href="https://github.com/toubou91/percircle/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork toubou91/percircle on GitHub">Fork</a>
+        </div>
+
         <h1>percircle</h1>
         
         <h2>Color variants</h2>
