Added footer with social links

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="./dist/js/percircle.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="./dist/css/percircle.css">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
 
 	<style>
 	body {
@@ -134,7 +134,7 @@
                     <pre style="white-space: pre-line"><code>
                         $("#custom-color").percircle({
                         &nbsp;&nbsp;progressBarColor: "#CC3366",
-                        &nbsp;&nbsp;percent: 64.5<
+                        &nbsp;&nbsp;percent: 64.5
                         });
                     </code></pre>
                 </div>
@@ -151,7 +151,15 @@
             <!-- /custom options -->
             </div>
     </div>
-    <small>Thodoris Bais | <a href="https://toubou91.github.io">Blog</a></small>
+    <footer class="footer" style="background-color: gainsboro">
+        <div class="container text-center">
+            <span>Thodoris Bais |</span>
+                <a href="https://www.facebook.com/toubou.techblog/"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/ThodorisBais"><i class="fa fa-twitter"></i></a>
+                <a href="https://github.com/toubou91"><i class="fa fa-github"></i></a>
+            </div>
+        </div>
+    </footer>
 
     <script type="text/javascript">
         $(function(){
