fix script reference in dev html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 			  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
         crossorigin="anonymous"></script>
-  <script src="./percircle.bundle.js"></script>
+  <script src="./percircle.js"></script>
   <link rel="stylesheet" href="./percircle.css">
   <style>
     body {
