Updated social networks links

--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
 <footer class="footer" style="background-color: gainsboro">
     <div class="container text-center">
         <span>Thodoris Bais |</span>
-        <a href="https://www.facebook.com/toubou.techblog/"><i class="fa fa-facebook"></i></a>
-        <a href="https://twitter.com/ThodorisBais"><i class="fa fa-twitter"></i></a>
-        <a href="https://github.com/toubou91"><i class="fa fa-github"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100000434680724"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/thodorisbais"><i class="fa fa-twitter"></i></a>
+        <a href="https://github.com/thodorisbais"><i class="fa fa-github"></i></a>
     </div>
     </div>
 </footer>
